add JWT authentication and authorization with security configuration